--- a/package.json
+++ b/package.json
@@ -1,27 +1,35 @@
 {
-  "name": "little-chef",
-  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "next dev --turbopack",
+    "start": "next start"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.1"
+    "@heroicons/react": "^2.2.0",
+    "@tailwindcss/forms": "^0.5.10",
+    "bcrypt": "^5.1.1",
+    "clsx": "^2.1.1",
+    "eslint": "^9.25.1",
+    "next": "latest",
+    "next-auth": "5.0.0-beta.25",
+    "openai": "^4.97.0",
+    "postgres": "^3.4.5",
+    "react": "latest",
+    "react-dom": "latest",
+    "typescript": "5.7.3",
+    "use-debounce": "^10.0.4",
+    "uuid": "^10.0.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.1",
-    "@eslint/eslintrc": "^3"
+    "@types/bcrypt": "^5.0.2",
+    "@types/node": "22.10.7",
+    "@types/react": "19.0.7",
+    "@types/react-dom": "19.0.3",
+    "@types/uuid": "^10.0.0",
+    "autoprefixer": "10.4.20",
+    "postcss": "8.5.1",
+    "tailwindcss": "3.4.17"
   }
 }
