--- a/package.json
+++ b/package.json
@@ -4,18 +4,23 @@
     "build": "next build",
     "dev": "next dev --turbopack",
     "start": "next start",
-    "test": "jest"
+    "test": "jest",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/forms": "^0.5.10",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.5.0",
+    "drizzle-orm": "^0.44.2",
     "eslint": "^9.25.1",
     "next": "latest",
     "next-auth": "5.0.0-beta.25",
     "openai": "^4.97.0",
-    "postgres": "^3.4.5",
+    "postgres": "^3.4.7",
     "react": "latest",
     "react-dom": "latest",
     "typescript": "5.7.3",
@@ -34,6 +39,7 @@
     "@types/react-dom": "19.0.3",
     "@types/uuid": "^10.0.0",
     "autoprefixer": "10.4.20",
+    "drizzle-kit": "^0.31.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "8.5.1",
