--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/forms": "^0.5.10",
     "bcrypt": "^5.1.1",
+    "better-auth": "^1.2.10",
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.2",
     "eslint": "^9.25.1",
     "next": "latest",
-    "next-auth": "5.0.0-beta.25",
     "openai": "^4.97.0",
     "postgres": "^3.4.7",
     "react": "latest",
